--- a/frontend/src/components/PositionBar/PositionBar.css
+++ b/frontend/src/components/PositionBar/PositionBar.css
@@ -15,3 +15,9 @@
     font-size: 1.1em;
     margin-left: 5%;
 }
+
+.cursor {
+    height: 100%;
+    background-color: #bf2727;
+    width: 40px;
+}
