--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -43,3 +43,10 @@ button:focus {
   left: 50%;
   transform: translate(-50%);
 }
+
+.bottom-buttons input {
+  margin-right: 10px;
+  background-color: #FFF;
+  color: #000;
+  width: 38%;
+}
