--- a/frontend/src/components/Timer/Timer.css
+++ b/frontend/src/components/Timer/Timer.css
@@ -1,4 +1,11 @@
 #timer {
     grid-row: 1/2;
     grid-column: 15/17;
+    font-size: 25px;
+    color: #ffffff;
+}
+#time{
+    margin-top: 11.5%;
+    font-weight: 700;
+    text-align:center;
 }
