--- a/frontend/src/components/Timer/Timer.css
+++ b/frontend/src/components/Timer/Timer.css
@@ -1,11 +1,15 @@
 #timer {
     grid-row: 1/2;
     grid-column: 15/17;
-    font-size: 25px;
-    color: #ffffff;
+    position: relative;
 }
 #time{
-    margin-top: 11.5%;
+    
     font-weight: 700;
-    text-align:center;
+    font-size:24px;
+    position: absolute;
+    top:50%;
+    left:4%;
+    margin-top: -12.5px;
+    color: #ffffff;
 }
