--- a/frontend/src/components/Timer/Timer.css
+++ b/frontend/src/components/Timer/Timer.css
@@ -1,15 +1,12 @@
 #timer {
+    display: flex;
+    justify-content: center;
     grid-row: 1/2;
     grid-column: 15/17;
-    position: relative;
+    align-items: center;
 }
-#time{
-    
+#time{    
     font-weight: 700;
-    font-size:24px;
-    position: absolute;
-    top:50%;
-    left:4%;
-    margin-top: -12.5px;
+    font-size:x-large;
     color: #ffffff;
 }
