fix the font size

--- a/frontend/src/components/Timer/Timer.css
+++ b/frontend/src/components/Timer/Timer.css
@@ -7,7 +7,7 @@
 }
 #time{    
     display: inline-flex;
-    font-size: 175%;
+    font-size: 3.7vh;
     font-weight: 700;
     color: #ffffff;
 }
