--- a/frontend/src/components/Setup/Setup.css
+++ b/frontend/src/components/Setup/Setup.css
@@ -1,7 +1,6 @@
 .setup-wrapper {
-  width: 50%;
-  max-width: 500px;
-  padding: 20px 0;
+  width: 40vw;
+  padding: 0px 20px 20px 20px;
   text-align: center;
   color: white;
   font-size: 1.25em;
