--- a/frontend/src/components/ButtonContainer/ButtonContainer.css
+++ b/frontend/src/components/ButtonContainer/ButtonContainer.css
@@ -4,3 +4,20 @@
   display: flex;
   flex-direction: column;
 }
+
+.modal-run {
+  position: fixed;
+  left: 50%;
+  margin-top: 100px;
+  transform: translate(0, -50%);
+  border: none;
+}
+
+.modal-run-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.8);
+}
