Move modal outside ButtonContainer

--- a/frontend/src/components/SetupModal/SetupModal.css
+++ b/frontend/src/components/SetupModal/SetupModal.css
@@ -1,3 +1,20 @@
+.modal-run {
+  position: fixed;
+  left: 50%;
+  margin-top: 100px;
+  transform: translate(0, -50%);
+  border: none;
+}
+
+.modal-run-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.8);
+}
+
 .setup-wrapper {
   width: 40vw;
   padding: 0px 20px 20px 20px;
