--- a/frontend/src/components/Gauge/Gauge.css
+++ b/frontend/src/components/Gauge/Gauge.css
@@ -12,3 +12,36 @@
     grid-row: 6/8;
     grid-column: 15/17;
 }
+
+.gauge {
+    /* display: flex;
+    justify-content: center;
+    vertical-align: middle; */
+}
+
+.gauge-title {
+    color: white;
+    padding: 10px 15px;
+    font-size: 1vw;
+    margin-bottom: -35px;
+}
+
+.progress-ring {
+    position: relative;
+    transform-origin: 0 0;
+}
+
+.progress-ring-progress {
+    transition: 0.35s stroke-dashoffset;
+    transform: rotate(-200deg);
+    transform-origin: 50% 50%;
+}
+
+.progress-ring-stopper {
+    transform: rotate(-20deg);
+    transform-origin: 50% 50%;
+}
+
+/* .progress-value, .progress-unit {
+    transform: translateY(30px);
+} */
