set up the data stream for compile

--- a/frontend/src/components/Button/Button.css
+++ b/frontend/src/components/Button/Button.css
@@ -28,6 +28,9 @@
 }
 
 /* Colors */
+.button-green {
+  background: rgba(17, 114, 26, 1);
+}
 
 .button-green-pulse {
   animation-name: green-color-pulse;
