--- a/frontend/src/components/GraphsContainer/GraphsContainer.css
+++ b/frontend/src/components/GraphsContainer/GraphsContainer.css
@@ -2,8 +2,11 @@
     grid-row: 1/5;
     grid-column: 1/8;
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+}
+#all{
+    display: flex;
+    width: 100%;
+    height: 100%;
     position: relative;
 }
 
