--- a/frontend/src/components/Sidebar/Sidebar.css
+++ b/frontend/src/components/Sidebar/Sidebar.css
@@ -8,7 +8,7 @@
   display: flex;
   justify-content: center;
   border-radius: 50%;
-  color: #8f8f8f;
+  color: #fff;
   font-size: 1.3em;
   width: 1em;
   height: 1em;
@@ -18,6 +18,6 @@
 
 .sidebar-icon:hover {
   cursor: pointer;
-  background-color: #8f8f8f;
-  color: #343434;
+  background-color: #fff;
+  color: #191919;
 }
