--- a/frontend/src/components/StatusContainer/StatusContainer.css
+++ b/frontend/src/components/StatusContainer/StatusContainer.css
@@ -1,4 +1,121 @@
-#status-container {
+#status {
     grid-row: 1/3;
     grid-column: 8/15;
+    display: flex;
+    flex-direction: column;
+}
+
+#status-container {
+    display: flex;
+    padding: 10px;
+    flex: 1 1 auto;
+}
+
+#connection-container {
+    padding: 0px 20px 5px 20px;
+    color: white;
+    flex: 0.1 0.1 auto;
+    display: flex;
+    justify-content: space-between;
+}
+
+.status-title {
+    color: white;
+    font-size: 0.9vw;
+    padding-bottom: 5px;
+}
+
+/* Module status */
+
+.status-modules {
+    flex: 0.5 0.5 auto;
+    display: flex;
+    flex-direction: column;
+    padding-left: 10px;
+}
+
+.status-modules-content {
+    flex: 1 1 auto;
+    display: grid;
+    grid-template-rows: 30% 30% 30%;
+    grid-template-columns: 47.5% 47.5%;
+    grid-column-gap: 5%;
+    grid-row-gap: 5%;
+}
+
+/* Sensors status */
+
+.status-sensors-container {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 2;
+}
+
+.status-sensors {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    border-right: 1px solid #707070;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.status-sensors-content {
+    flex: 1 1 auto;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.status-sensors-row-top > .status-sensors {
+    padding-bottom: 10px;
+}
+
+.status-sensors-row-bottom > .status-sensors {
+    padding-top: 10px;
+}
+
+.status-sensors-row + .status-sensors-row {
+    border-top: 1px solid #707070;
+}
+
+.status-sensors-row {
+    flex: 1 1 auto;
+    display: flex;
+}
+
+.status-sensors-content > .status-indicator {
+    flex: 1 1 20%;
+    height: 100%;
+}
+
+.status-sensors-content > .status-indicator + .status-indicator {
+    margin-left: 5px;
+}
+
+/* Connection indicator */
+
+.connection-indicator {
+    margin-right: 10px;
+}
+
+/* Status indicator */
+
+.status-indicator {
+    background-color: white;
+    font-size: 1vw;
+    border-radius: 5px;
+    border: 1px solid #707070;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.status-indicator-neutral {
+    background-color: white;
+    color: white;
+}
+
+.status-indicator-negative {
+    background-color: rgba(175,17,27,1);
+    color: white;
 }
