--- a/frontend/src/components/Terminal/Terminal.css
+++ b/frontend/src/components/Terminal/Terminal.css
@@ -2,7 +2,10 @@
     grid-row: 5/10;
     grid-column: 1/8;
     display: flex;
+    justify-content: center;
+    align-content: center;
     flex-flow: row wrap;
+    flex: 1 1 auto;
 }
 
 .terminal-content {
@@ -12,7 +15,7 @@
     width: 100%;
     display: block;
     background-color: black;
-    color: rgb(0, 255, 0);
+    color: #FFF;
     border: 2px solid #1E1E1E;
     text-align: left;
 }
@@ -23,7 +26,7 @@
 
 .footer {
     margin: 1%;
-    width: 35%;
+    width: 100%;
     height: 8%;
     display: flex;
 }
@@ -39,14 +42,20 @@ pre {
     margin-right: 10px;
     background-color: #FFF;
     color: #000;
-    width: 38%;
-    justify-content: "flex-start";
+    justify-content: "center";
 }
 
 .footer select {
-    min-width: 80px;
+    flex-grow: 1;
 }
 
 .footer input {
-    min-width: 120px;
+    flex-grow: 5;
+}
+
+.footer button {
+    margin-right:10px;
+    flex-grow: 3;
+    color: #000;    
+    background-color: #FFF;
 }
