--- a/frontend/src/components/DataList/DataList.css
+++ b/frontend/src/components/DataList/DataList.css
@@ -9,35 +9,13 @@
   background: rgb(27,27,27);
 }
 
-.data-list.next {
-  border-left: 0.5px solid #707070;
-}
-
-.data-list:last-child {
-  border-color: transparent;
-}
-
-.data-list-header > .data-list-header-line {
-  position: relative;
-  left: -0.5px;
-  width: 10px;
-  height: 50%;
-  border-style: solid;
-  border-color: #707070;
-  border-width: 0 0 0.5px 0.5px;
-  z-index: 1;
-}
-
 .data-list-header > .data-list-header-content {
   display: flex;
   width: 100%;
   justify-content: space-between;
   align-items: center;
   font-size: 14px;
-}
-
-.data-list-header > .data-list-header-content > .data-list-header-content-title {
-  padding-left: 0px;
+  padding: 0px 10px;
 }
 
 .data-list-body-collapse {
