--- a/frontend/src/components/DataRow/DataRow.css
+++ b/frontend/src/components/DataRow/DataRow.css
@@ -1,14 +1,3 @@
-.data-row-container {
-  display: flex;
-  position: relative;
-  height: 25px;
-  left: 0.5px solid #707070;
-}
-
-.data-row-container:last-child {
-  border-color: transparent;
-}
-
 .data-row {
   display: grid;
   grid-auto-rows: 25px;
@@ -17,24 +6,7 @@
   width: 100%;
   background: #191919;
   align-items: center;
-}
-
-.data-row.next {
-  margin-left: 5px;
-  border-left-width: 0.5px;
-  border-left: 0.5px solid #707070;
-}
-
-.data-row-line {
-  display: inline-block;
-  position: relative;
-  left: -0.5px;
-  width: 10px;
-  height: 50%;
-  border-style: solid;
-  border-color: #707070;
-  border-width: 0 0 0.5px 0.5px;
-  z-index: 1;
+  box-shadow: 0px 3px 10px 0px rgba(0, 0, 0, 0.8);
 }
 
 .data-row > div {
@@ -46,10 +18,8 @@
 .data-row > .data-row-name {
   grid-row: 1 / 2;
   grid-column: 1 / 5;
-  margin-left: 15px;
   white-space: nowrap;
-  margin-right: 10px;
-  margin-left: 5px;
+  margin: 10px;
 }
 
 .data-row > .data-row-bar {
@@ -73,64 +43,15 @@
   margin-left: 10px;
 }
 
-.data-row > .data-row-value.data-row-value-string {
-  grid-column: 5 / 11;
-  justify-content: flex-end;
-  margin-right: 10px;
-}
-
 .data-row-bar > .progress-bar {
   height: 100%;
   transition: width 500ms;
+}
+
+.data-row-bar > .progress-bar-white {
   background-color: #fff;
 }
 
-.data-row-bar > .range {
-  position: relative;
-  width: 100%;
-  height: 100%;
-}
-
-.data-row-bar > .range > .range-border {
-  position: absolute;
-  left: 10%;
-  width: 80%;
-  height: 20%;
-  z-index: 10;
-  border-color: #AF111B;
-  border-width: 0 1px;
-  border-style: solid;
-}
-
-.data-row-bar.alert > .range > .range-border {
-  border-color: white;
-}
-
-.data-row-bar > .range > .range-border.range-border-bottom {
-  top: 80%;
-}
-
-.data-row-bar > .range > .range-value {
-  position: absolute;
-  -webkit-text-stroke: 0.1px white;
-  -webkit-text-fill-color: #AF111B;
-  top: 20%;
-  height: 60%;
-  width: auto;
-  font-size: 8px;
-  z-index: 20;
-}
-
-.data-row-bar.alert > .range > .range-value {
-  -webkit-text-fill-color: white;
-}
-
-.data-row-bar > .range > .range-min {
-  left: 10%;
-  transform: translate(-50%, 0%);
-}
-
-.data-row-bar > .range > .range-max {
-  right: 10%;
-  transform: translate(50%, 0%);
+.data-row-bar > .progress-bar-red {
+  background: rgba(175,17,27,1);
 }
