--- a/frontend/src/components/SetupModal/SetupModal.css
+++ b/frontend/src/components/SetupModal/SetupModal.css
@@ -70,7 +70,7 @@
   display: flex;
   box-sizing: border-box;
   width: 50%;
-  justify-content: start;
+  justify-content: flex-start;
   align-items: center;
   margin-top: 5px;
   font-size: 0.9em;
