--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Roboto";
-  src: url("/Roboto-Medium.ttf") format('truetype');
+  src: url("Roboto-Medium.ttf") format('truetype');
   font-weight: 500;
   font-style: normal;
 }
