--- a/frontend/src/components/DataList/DataList.css
+++ b/frontend/src/components/DataList/DataList.css
@@ -15,7 +15,7 @@
   justify-content: space-between;
   align-items: center;
   font-size: 14px;
-  padding: 0px 10px;
+  padding-right: 10px;
 }
 
 .data-list-body-collapse {
