--- a/frontend/src/components/Sidebar/Sidebar.css
+++ b/frontend/src/components/Sidebar/Sidebar.css
@@ -3,7 +3,8 @@
   display: flex;
   flex-direction: row;
   position: absolute;
-  right:0;
+  right: 0;
+  margin: 0.25em 0.5em 0 0;
 }
 
 .sidebar-icon {
