apply the new change for data selecting

--- a/frontend/src/components/LineGraph/LineGraph.css
+++ b/frontend/src/components/LineGraph/LineGraph.css
@@ -18,8 +18,8 @@
 
 #button-container > *:hover {
   cursor: pointer;
-  background-color: #fff;
-  color: #191919;
+  /*background-color: #fff;
+  color: #191919;*/
 }
 
 #graph-close-button {
@@ -29,12 +29,18 @@
 }
 
 #select-button {
-  transform: rotate(-180deg);
+  /*transform: rotate(-180deg);
   writing-mode: vertical-rl;
   font-size: 0.8em;
   margin-right: 1.1em;
   border-radius: 0.8em;
-  border: #fff solid 1px
+  border: #fff solid 1px*/
+  display:block;
+  width: 90%;
+  height: 19%;
+  position: absolute;
+  margin-top: -22%;
+  z-index:50;
 }
 
 #graph-wrapper {
