--- a/frontend/src/components/DataPointSelector/DataPointSelector.css
+++ b/frontend/src/components/DataPointSelector/DataPointSelector.css
@@ -7,6 +7,7 @@
   left: 0;
   width: 100%;
   border-radius: 15px;
+  z-index:100;
 }
 
 #list-close-button {
@@ -28,12 +29,23 @@
   overflow-y: auto;
 }
 
+.list-bar {
+  overflow-x: hidden;
+  overflow-y: auto;
+  width:100%;
+  height: 92%;
+}
+
+.list-bar > .simplebar-track.simplebar-vertical .simplebar-scrollbar:before {
+  background-color: #343434;
+}
+
 .dataPoint {
   text-transform: capitalize;
   margin: 0.3em 1.6em 0.3em 1.6em;
   padding: 0.5em;
-  font-size: 0.9em;
-  width: 91%;
+  font-size: 1em;
+  width: 84%;
   border-radius: 5px;
 }
 
