--- a/frontend/src/components/GraphsContainer/GraphsContainer.css
+++ b/frontend/src/components/GraphsContainer/GraphsContainer.css
@@ -11,13 +11,11 @@
     flex-basis: 100%;
 }
 #graphs{
-    width: 98%;
-    height:95%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    margin-left: 0.8%;
-    margin-top: 4%;
+    padding: 8px;
 }
 #sidebar{
     width: 10%;
