--- a/frontend/src/components/GraphsContainer/GraphsContainer.css
+++ b/frontend/src/components/GraphsContainer/GraphsContainer.css
@@ -15,7 +15,8 @@
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    padding: 8px;
+    padding: 1vw;
+    margin-left: -0.25vw;
 }
 #sidebar{
     width: 10%;
