--- a/frontend/src/components/Terminal/Terminal.css
+++ b/frontend/src/components/Terminal/Terminal.css
@@ -28,15 +28,14 @@
 }
 
 .footer {
-    margin: 1%;
     width: 100%;
     height: 7%;
-    display: flex;  
-    padding-left: 10px;
+    display: flex;
+    padding: 9px;
 }
 
 .footer.other {
-    padding-bottom: 5px;
+    padding-top: 0px;
 }
 
 pre {
@@ -48,9 +47,8 @@ pre {
 }
 
 input {
-    padding-left: 10px;
-    width: 350px;
-    margin-right: 10px;
+    padding: 0px 10px;
+    width: 100%;
     border-radius: 6px;
     background-color: #FFF;
     color: #000;
@@ -60,7 +58,6 @@ input {
 
 .footer button {
     border-radius: 6px;
-    margin-right: 10px;
     color: #000;    
     background-color: #FFF;
 }
@@ -87,13 +84,15 @@ a {
     position: relative;
     display: flex;
     flex: 1;
+    margin-left: 9px;
 }
 
 .dropdown {
     position: absolute;
-    background-color: #242526;
+    background: rgba(36, 37, 38, 0.95);
     border: 1px solid #474a4d;
-    padding: 1rem;
+    padding: 9px;
+    width: calc(100% - 18px);
     bottom: 100%;
 }
 
